# AI-HR-analytics

./: README.md  docker-compose.yml  package-lock.json
backend/: .env  Dockerfile  alembic.ini  pyproject.toml
backend/migration/: env.py
backend/migration/versions/: 2356d536d014_no_root.py  36ca45806a74_initial.py  475998c5f82d_professions.py  c7c44fd8d24e_resumes.py
backend/src/: main.py  start.sh
backend/src/project/api/: auth_routes.py  depends.py  healthcheck.py  profession_routes.py  resume_routes.py  user_routes.py
backend/src/project/core/: config.py  exceptions.py
backend/src/project/infrastructure/postgres/: models.py
backend/src/project/infrastructure/postgres/repository/: profession_repo.py  resume_repo.py
backend/src/project/resource/: analyze.py
backend/src/project/schemas/: profession.py  resume.py  userregister.py
frontend/: Dockerfile  Dockerfile.dev  vite.config.js
frontend/nginx/: nginx.conf
frontend/react_app/: package-lock.json  package.json
frontend/react_app/src/: App.jsx
frontend/react_app/src/components/: FileUpload.jsx  MessageModal.jsx  old_modal.module.css
frontend/react_app/src/pages/: Analyse.jsx  Authorization.jsx
frontend/react_app/src/utilits/: analyze.js  api.js  auth.js  getAllUsers.js
frontend/src/utilits/: api.js  frontend.code-workspace
